--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^10.11.0",
-    "typescript": "^3.0.3"
+    "typescript": "^3.2.0-dev.20180926"
   }
 }
